--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, MeetingPlanner!</string>
+    <string name="hello">Hello World, HelloMapsActivity!</string>
     <string name="app_name">MeetingPlanner</string>
+
+    
 </resources>
